--- a/index.html
+++ b/index.html
@@ -8,13 +8,56 @@
     <div class="nav--desktop">==$0
       <div class="mobile-wrapper">
         <div class="header-cart_wrapper hidden-lg">
-          <a href="/cart" class="cartToggle header-cart">...</a>
-          <span class="header-car_bubble cartCount has items hidden-count" >0</span>
+            <a href="/cart" class="cartToggle header-cart">
+              <i class="icon icon-ra_bag"> </i>
+            </a>
+          <span class="header-cart_bubble cartCount has items hidden-count" >0</span>
         </div>
-        <div class= "header0menu nav-wrapper">...</div>
-        <ul class="main-menu accessibleNav">...</ul>
-        <div>
-      <div>
+        <div class="logo-wrapper"
+          <h1 class= "h4 header-logo" itemscope itemtype="http:schema.org/organization">
+          <a href="/" itemprop= "url">
+            <i class="icon icon-ra_primary_logo">
+              ::before
+            </i>
+          </a>
+          </h1>
+        </div>
+       <a href class="menutoggle header-haburger"></a>
+      </div>
+    <div class= "header-menu nav-wrapper">
+        <ul class=main-menu accessibleNav">
+          <li class="grandparent kids-4">
+            <a href=/collections/all" class="nav-link">Shop </a>
+            <a href="#" class="nav-carat">
+              <span class= "plus">+</span>
+              <span class=" minus">-</span>
+            </a>
+            <div class="main-menu-dropdown">
+              <ul class="main-menu-dropdown--list">...</ul>
+            </div>
+          </li>
+          <li class="child kids=0">
+            <href="/pages/about-us" class ="nav-link" About </a>
+          </li>
+          <li class="child kids-0">
+            <a href= "/pages/process" class="nav-link"> Process </a>
+          </li>
+          <li class= "child kids-0">
+            <a href="blogs/from-the-studio" class="nav-link">Blog</a>
+          </li>
+          <li class child kids-0>
+            <a href="/pages/book" class="nav-link">Book</a>
+          </li>
+          <li class="child  kids-0">
+            <a href="/pages/trade" class="nav-link">Trade</a>
+          <li class="child  kids-0">
+            <a href="/pages/contact" class="nav-link">Contact</a>
+            <li class="cart-text-link">
+              <a href="/cart" class="CartToggle">...</a>
+          </li>
+          </ul>
+        </div>
+      </div>
   </body>
 </html>
 html
